# unico

./: .gitignore  CITATION.bib  LICENSE  README.md  environment.yml  inference.py  install.sh  main.py  pyproject.toml
ckpt/: ckpt-best.pth
conf/: config.yaml
conf/dataset/: abcmulti.yaml  abcplane.yaml  buildingnl.yaml
conf/experiment/: abcmulti.yaml  abcplane.yaml  buildingnl.yaml
conf/hydra/: default.yaml
conf/model/: unico_multi.yaml  unico_plane.yaml
data/abcmulti/: test.txt  train.txt
data/abcmulti/eval/easy/: 00424506_00.ply  00589523_00.ply  00870079_00.ply  00911689_00.ply
data/abcmulti/eval/hard/: 00424506_00.ply  00589523_00.ply  00870079_00.ply  00911689_00.ply
data/abcmulti/eval/medium/: 00424506_00.ply  00589523_00.ply  00870079_00.ply  00911689_00.ply
data/abcmulti/h5/: 00350801.h5  00415825.h5  00424506.h5  00540506.h5  00555475.h5  00589523.h5  00870079.h5  00911689.h5
data/raw/unico/abcmulti/archive/: test.txt  train.txt
datasets/: ABCMultiDataset.py  ABCPlaneDataset.py  BuildingNLDataset.py  __init__.py  data_transforms.py  io.py
evaluation/: 00206461.seg  00206461.vg  00424506.seg  00589523.seg  00689071.seg  00689071.vg  00870079.seg  00911689.seg  00946462.seg  00946462.vg
extensions/chamfer_dist/: __init__.py  test.py
models/: Transformer_utils.py  __init__.py  unico.py
scripts/: infer.sh  train_ddp.sh  train_dp.sh
tools/: builder.py  export_visuals.py  runner.py  test.py
utils/: checkpoint.py  config.py  dist_utils.py  evaluator.py  logger.py  metrics.py  misc.py  parser.py  registry.py  save_seg.py  save_vg.py
